# Trust

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.scope/: scope.db  scope.db-shm  scope.db-wal
.scope/events/: 01KSG4NF0CMAHNGZGM8RQYJKAP.json  01KSG4QNQAATCPK149D29QEX2V.json  01KSG4QNT23KV70HKH5EN28VY6.json  01KSG4QNWN28C1CS3ZJZYB7W6X.json  01KSG4QNZAPXSQZA1XA9GQQ9RV.json  01KSG4R8MC8DW9EPVM1KX4YHV2.json  01KSG4R8Q4E25TKAWYV9508ST9.json  01KSG4R8SWKXMXMNW86E5ATYKW.json  01KSG4R8WJ9VDN1NJF94RDVR82.json  01KSG4S618SZMMT2CV07Q7ZJRB.json  01KSG4S63X8K2TTED7PH5SXAW6.json  01KSG4S66GKFH8VT7BBWV6SWKA.json  01KSG4S694S0ZX2FHKMEEDSYGQ.json  01KSG4S6BQNE0E2TJ9C2C1R1T2.json  01KSG4S6EB2J455XNVQKR9RAPQ.json  01KSG4S6GY84Z6WR8A3EQXHTQS.json  01KSG4SMSX75VAH3S5WMEPF61Z.json  01KSG4SMWNRVGFYX1P007FCZB1.json  01KSG4SMZDD6B2XSHRFAFPN9J0.json  01KSG4SN2BKCZDZ5N73CEWYN7E.json  01KSG4SN505N7SWXA37YT3SCHP.json  01KSG4SN7QGYHVJTMXNAB2WPKM.json  01KSG4SNAAGZYJ30WST02MTXD5.json  01KSG5A7B94YF7CTYNV64BF2EY.json  01KSG5A7E067B72KYC2F7C90TW.json  01KSG5FNP1CEA73ESV6Z9EPN0C.json  01KSG5FNRV7HVVEAPZ93TJ8F9M.json  01KSG5KR7H02FN84R0FRRQQXM6.json  01KSG5YMH986WZRFYBG216A742.json  01KSG62YBGXXZH84QAM1PZV95N.json  01KSG62YE3TS8WEENZZKHBK4M2.json  01KSG62YGPWQ9Q2WWG4NX3VJPX.json  01KSG64CP8FHEFQZBRKV1BDA4V.json  01KSG66865SVHPWB4WVN4NJ1HK.json  01KSG6689CH9C59ACMJ1SA375R.json  01KSG68RVNN8DGRDSN8RFFC0MH.json  01KSG6CJ4F5C17C3HHX7QZ9YWZ.json  01KSG6CJ76YQTN60AYD2J6GV7P.json  01KSH8P5D42A3036CVNVSWFEH1.json  01KSH8PM0QRW97CHJKFSHW18D3.json  (+432 more)
case-studies/: dogfooding.md  effects-audit.md  heck-strict.md  rustricted-cli-strict-failed.md  rustricted-syntax-strict.md  tre-strict.md  trust-cli-strict-failed.md  trust-syntax-strict.md
case-studies/heck-strict/: Cargo.toml
case-studies/heck-strict/src/: kebab.rs  lib.rs  lower_camel.rs  shouty_kebab.rs  shouty_snake.rs  snake.rs  title.rs  train.rs  upper_camel.rs
case-studies/tre-strict/: Cargo.toml
case-studies/tre-strict/src/: cli.rs  diagram_formatting.rs  file_tree.rs  json_formatting.rs  main.rs  output.rs  path_finders.rs  tre.rs
crates/cargo-rustricted/: Cargo.toml
crates/cargo-rustricted/src/: main.rs
crates/cargo-trust/: Cargo.toml
crates/cargo-trust/src/: main.rs
crates/cargo-trustc/: Cargo.toml  README.md
crates/cargo-trustc/src/: main.rs
crates/rustricted/: Cargo.toml
crates/rustricted-attrs/: Cargo.toml
crates/rustricted-attrs/src/: lib.rs
crates/rustricted-attrs/tests/: cargo_build.rs
crates/rustricted-diag/: Cargo.toml
crates/rustricted-effects/: Cargo.toml
crates/rustricted-effects/src/: check.rs  lib.rs  parser.rs  registry.rs  rule.rs
crates/rustricted-lints/: Cargo.toml
crates/rustricted-lints/src/: allow.rs  lib.rs  rules.rs  runner.rs  strict.rs
crates/rustricted-lower/: Cargo.toml  build.rs
crates/rustricted-lower/src/: lib.rs  named_args.rs  pipe.rs  preprocess.rs  std_signatures.rs
crates/rustricted-lsp/: Cargo.toml
crates/rustricted-lsp/src/: lib.rs  main.rs
crates/rustricted-rustc/: Cargo.toml
crates/rustricted-rustc/src/: lib.rs  main.rs
crates/rustricted-rustdoc/: Cargo.toml
crates/rustricted-rustdoc/src/: main.rs
crates/rustricted-std/: Cargo.toml  std-signatures.txt
crates/rustricted-syntax/: Cargo.toml
crates/rustricted-syntax/src/: lib.rs
crates/rustricted/src/: main.rs
crates/rustricted/tests/: stdin.rs
crates/trust/: Cargo.toml  README.md
crates/trust-attrs/: Cargo.toml
crates/trust-attrs/src/: lib.rs
crates/trust-attrs/tests/: cargo_build.rs
crates/trust-diag/: Cargo.toml  README.md
crates/trust-diag/src/: lib.rs  tests.rs
crates/trust-lints/: Cargo.toml  README.md
crates/trust-lints/src/: allow.rs  config.rs  lib.rs  rules.rs  runner.rs  strict.rs
crates/trust-lints/tests/: window_rules.rs
crates/trust-lower/: Cargo.toml  README.md  build.rs
crates/trust-lower/src/: contracts.rs  lib.rs  named_args.rs  pipe.rs  preprocess.rs  rule.rs  safety_fix.rs  sig_index.rs  std_signatures.rs
crates/trust-lsp/: Cargo.toml  README.md
crates/trust-lsp/src/: lib.rs  main.rs
crates/trust-rustc/: Cargo.toml  README.md
crates/trust-rustc/src/: lib.rs  main.rs
crates/trust-rustdoc/: Cargo.toml  README.md
crates/trust-rustdoc/src/: main.rs
crates/trust-std/: Cargo.toml  README.md  std-signatures.txt
crates/trust-std/src/: lib.rs  tests.rs
crates/trust-syntax/: Cargo.toml  README.md
crates/trust-syntax/src/: lib.rs
crates/trust/src/: config.rs  main.rs
crates/trust/tests/: new_scaffold.rs  stdin.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  std_signatures.rs
docs/: AGENTS.md  RATIONALE.md  SPEC.md  WHY.md  WRITING-TRUST.md
docs/launch/: hn.md  lobsters.md  reddit-rust.md  x.md
docs/templates/: CLAUDE-md-snippet.md
editors/vscode/: .vscodeignore  README.md  package.json
eval/: README.md  run_cross_provider.py  score.py  summarize.py  tasks.toml
eval/agent-workflow/: README.md  run_agent_eval.py  score_agent.py  summarize_agent.py  tasks.toml
eval/false-positives/: REPORT.md  raw_anyhow.json  raw_workspace.json  run_eval.py  summary.json
examples/: 00-hello.rs
examples/01-lints/: as-cast-fail.rs  bare-index-fail.rs  bool-param-fail.rs  cargo-strict-unwrap-fail.rs  glob-import-fail.rs  impl-trait-return-fail.rs  panic-fail.rs  positional-fail.rs  same-type-params-fail.rs  strict-clean.rs  todo-fail.rs  unwrap-fail.rs
examples/02-pipe/: chain.rs
examples/03-named-args/: area.rs
examples/04-effects/: declared.rs  undeclared.rs
examples/cargo-strict-config/: Cargo.toml
examples/cargo-strict-config/src/: main.rs
examples/cargo-strict-cross-crate/: Cargo.toml
examples/cargo-strict-cross-crate/src/: main.rs
examples/cargo-strict-fixture/: Cargo.toml
examples/cargo-strict-fixture-multimod/: Cargo.toml
examples/cargo-strict-fixture-multimod/src/: geom.rs  lib.rs  main.rs
examples/cargo-strict-fixture/src/: main.rs
scripts/: fmt.sh
skills/: README.md
skills/writing-trust/: SKILL.md
(+232 files in other folders)
