[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
authors = ["Bri <bri@briannadoubt.com>"]
repository = "https://github.com/briannadoubt/trust"

[workspace.dependencies]
anyhow = "1"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
insta = "1"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
tempfile = "3"
thiserror = "1"
toml = "0.8"

# Internal crates — version + path so cargo publish accepts them while
# local dev still uses the path. crates.io ignores `path` for resolution.
trust-diag = { version = "0.1.0", path = "crates/trust-diag" }
trust-lints = { version = "0.1.0", path = "crates/trust-lints" }
trust-lower = { version = "0.1.0", path = "crates/trust-lower" }
trust-rustc = { version = "0.1.0", path = "crates/trust-rustc" }
trust-syntax = { version = "0.1.0", path = "crates/trust-syntax" }

[profile.release]
lto = "thin"
codegen-units = 1
