[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.1"
edition = "2021"
# MSRV (RT-104). The previous 1.95 was aspirational and blocked `cargo install
# trust-lang` on common toolchains — adopting a linter shouldn't drag the whole
# toolchain forward. Our own code floor is 1.70 (`is_some_and`/`is_ok_and`), but
# the binding constraint is the dependency tree: clap declares 1.85, and the
# committed Cargo.lock is format v4 (needs Cargo >= 1.78). Declaring below a
# dep's own supported floor is the fragility that bit our first adopter in
# reverse — so we pin the honest floor, 1.85, verified with
# `cargo +1.85 check --workspace --all-targets --locked`. The `msrv` CI job
# guards it so a dependency bump can't silently regress it.
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Bri <bri@briannadoubt.com>"]
repository = "https://github.com/briannadoubt/trust"

[workspace.dependencies]
anyhow = "1.0.102"
ariadne = "0.6.0"
clap = { version = "4.6.1", features = ["derive"] }
insta = "1.48.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "extra-traits", "visit"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"

# Internal crates — version + path so cargo publish accepts them while
# local dev still uses the path. crates.io ignores `path` for resolution.
trust-diag = { version = "0.2.1", path = "crates/trust-diag" }
trust-lints = { version = "0.2.1", path = "crates/trust-lints" }
trust-lower = { version = "0.2.1", path = "crates/trust-lower" }
trust-rustc = { version = "0.2.1", path = "crates/trust-rustc" }
trust-syntax = { version = "0.2.1", path = "crates/trust-syntax" }

[profile.release]
lto = "thin"
codegen-units = 1
