[package]
name = "cargo-rustricted"
description = "Cargo subcommand wrapper for the Rustricted toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "cargo-rustricted"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
