[package]
name = "cargo-trust"
description = "Cargo subcommand wrapper for the Trust toolchain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "cargo-plugin", "cli", "rust"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-trust"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
toml.workspace = true
