[package]
name = "cargo-trustc"
description = "Cargo subcommand for the Trust toolchain — `cargo trustc build/run/test` with the lowering shims wired in"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "cargo-plugin", "cli", "rust"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-trustc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
toml.workspace = true
trust-lower.workspace = true

[dev-dependencies]
tempfile.workspace = true
