[package]
name = "rustricted-attrs"
description = "Activation marker macro for the Rustricted dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
