[package]
name = "rustricted-effects"
description = "Effect tracking and inference for the Rustricted dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = { workspace = true, features = ["span-locations"] }
syn.workspace = true
thiserror.workspace = true
rustricted-diag = { path = "../rustricted-diag" }

[dev-dependencies]
insta.workspace = true
