[package]
name = "rustricted-lower"
description = "Token-level lowering passes from Rustricted to plain Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[build-dependencies]
syn = { workspace = true }

[dependencies]
prettyplease.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn.workspace = true
thiserror.workspace = true
rustricted-diag = { path = "../rustricted-diag" }

[dev-dependencies]
insta.workspace = true
