[package]
name = "rustricted-lsp"
description = "Language server for Rustricted (stub)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rustricted-lsp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
