[package]
name = "rustricted-rustc"
description = "RUSTC_WRAPPER shim: lowers Rustricted source before invoking rustc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rustricted-rustc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
rustricted-lower = { path = "../rustricted-lower" }
