[package]
name = "rustricted-rustdoc"
description = "RUSTDOC shim: lowers Rustricted source before invoking rustdoc (doc-tests etc.)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rustricted-rustdoc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
rustricted-lower = { path = "../rustricted-lower" }
rustricted-rustc = { path = "../rustricted-rustc" }
