[package]
name = "rustricted-syntax"
description = "Parsing and re-emission for the Rustricted dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rustricted-attrs = { path = "../rustricted-attrs" }
syn.workspace = true
thiserror.workspace = true
