[package]
name = "rustricted"
description = "CLI driver for the Rustricted dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rustricted"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
syn.workspace = true
tempfile.workspace = true
rustricted-attrs = { path = "../rustricted-attrs" }
rustricted-diag = { path = "../rustricted-diag" }
rustricted-lints = { path = "../rustricted-lints" }
rustricted-lower = { path = "../rustricted-lower" }
rustricted-syntax = { path = "../rustricted-syntax" }
