[package]
name = "trust-attrs"
description = "Activation marker macro for the Trust dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rust", "lint", "macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
