[package]
name = "trust-diag"
description = "Teaching diagnostics for the Trust dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rust", "diagnostic", "lint"]
categories = ["development-tools"]

[dependencies]
ariadne.workspace = true
