[package]
name = "trust-diag"
description = "Teaching diagnostics for the Trust dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rust", "diagnostic", "lint"]
categories = ["development-tools"]

# Whole-crate strict dogfood (shipping code; cfg(test)-only files are
# exempt — RT-88): enforced when built via `cargo trust`; invisible to
# stock cargo.
[package.metadata.trust]
strict = true

[dependencies]
ariadne.workspace = true
