[package]
name = "trust-lints"
description = "Strict-mode lint preset for the Trust dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rust", "lint", "clippy"]
categories = ["development-tools"]

[dependencies]
proc-macro2 = { workspace = true, features = ["span-locations"] }
syn.workspace = true
trust-diag.workspace = true

[dev-dependencies]
insta.workspace = true
