[package]
name = "trust-lints"
description = "Strict-mode lint preset for the Trust dialect"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rust", "lint", "clippy"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
syn.workspace = true
toml.workspace = true
trust-diag.workspace = true

[dev-dependencies]
trust-lower.workspace = true
insta.workspace = true
tempfile.workspace = true
