[package]
name = "trust-lower"
description = "Token-level lowering passes from Trust to plain Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
prettyplease.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn.workspace = true
thiserror.workspace = true
trust-diag = { path = "../trust-diag" }

[dev-dependencies]
insta.workspace = true
