[package]
name = "trust-lsp"
description = "Language server for Trust"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rust", "lsp", "language-server"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "trust-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
syn.workspace = true
proc-macro2.workspace = true
trust-diag.workspace = true
trust-lower.workspace = true
trust-lints.workspace = true
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "sync"] }
serde_json = "1"

[dev-dependencies]
tempfile.workspace = true
