[package]
name = "trust-rustc"
description = "RUSTC_WRAPPER shim: lowers Trust source before invoking rustc"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rustc", "wrapper", "build"]
categories = ["development-tools::build-utils"]

[lib]
name = "trust_rustc"
path = "src/lib.rs"

[[bin]]
name = "trust-rustc"
path = "src/main.rs"

[dependencies]
proc-macro2.workspace = true
anyhow.workspace = true
syn.workspace = true
trust-diag.workspace = true
trust-lints.workspace = true
trust-lower.workspace = true

[dev-dependencies]
serde_json = "1"

