[package]
name = "trust-std"
description = "Standard library shims with named-arg signatures for Trust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
trust-attrs = { path = "../trust-attrs" }
