[package]
name = "trust-std"
description = "Standard library shims with named-arg signatures for Trust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rust", "stdlib", "named-arguments"]
categories = ["development-tools"]

[dependencies]
trust-attrs.workspace = true
