[package]
name = "trust-syntax"
description = "Parsing and re-emission for the Trust dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
trust-attrs = { path = "../trust-attrs" }
syn.workspace = true
thiserror.workspace = true
