[package]
name = "trust-syntax"
description = "Parsing and re-emission for the Trust dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rust", "parser", "syntax"]
categories = ["parser-implementations"]

[dependencies]
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
trust-attrs.workspace = true
syn.workspace = true
thiserror.workspace = true
