[package]
name = "trust-syntax"
description = "Parsing and re-emission for the Trust dialect"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rust", "parser", "syntax"]
categories = ["parser-implementations"]

# Whole-crate strict dogfood: enforced when built via `cargo trustc`
# (or RUSTC_WRAPPER + TRUST_STRICT_PACKAGES); invisible to stock cargo.
[package.metadata.trust]
strict = true

[dependencies]
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
thiserror.workspace = true
