[package]
name = "trust"
description = "CLI driver for the Trust dialect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["trust", "strict", "rust", "lint", "llm"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "trust"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
syn.workspace = true
tempfile.workspace = true
trust-attrs.workspace = true
trust-diag.workspace = true
trust-lints.workspace = true
trust-lower.workspace = true
trust-syntax.workspace = true
