[package]
name = "xtask"
description = "Developer tasks: docs autogen, release checks, etc."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
rustricted-lints = { path = "../rustricted-lints" }
