[workspace]
# Standalone workspace — keep out of the main /Users/bri/dev/One workspace
# so the RUSTC_WRAPPER end-to-end test doesn't trigger rebuilds of every
# rustricted-* crate every time it runs.

[package]
name = "cargo-strict-cross-crate"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "cargo-strict-cross-crate"
path = "src/main.rs"

[dependencies]
rustricted-attrs = { path = "../../crates/rustricted-attrs" }
rustricted-std = { path = "../../crates/rustricted-std" }
