[workspace]
# Standalone workspace — keep out of the main /Users/bri/dev/One workspace
# so the RUSTC_WRAPPER end-to-end test doesn't trigger rebuilds of every
# rustricted-* crate every time it runs.

[package]
name = "cargo-strict-fixture"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "cargo-strict-fixture"
path = "src/main.rs"

[dependencies]
rustricted-attrs = { path = "../../crates/rustricted-attrs" }
